2006-08-24  Paolo Maggi  <paolo@gnome.org>

	Fixes bug 352658 – print preview state machine issue.
	
	* gedit/gedit-tab.c (print_preview_destroyed): add a comment and
	check that the state is "printing" in the "else" case  
	(print_finished_cb) (print_cancelled): If we are printing while 
	showing the print preview, close the print preview when done or 
	cancelled

2006-08-24  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #352662 – Opening non-existing remote file from command line
	should report an error

	* gedit/gedit-document.c (document_loader_loaded): ignore the 
	"create" flag is the file is not local

	* gedit/gedit-utils.c (gedit_utils_uri_has_file_scheme): returns FALSE
	if the uri is a chained uri.

2006-08-23  Paolo Borelli  <pborelli@katamail.com>

	* plugins/filetree/gedit-file-browser-plugin.c: plug a leak.

2006-08-23  Paolo Maggi  <paolo@gnome.org>

	* gedit/gedit-languages-manager.c
	(gedit_languages_manager_get_language_from_mime_type): gives
	priority to exact matches.

2006-08-23  Paolo Maggi  <paolo@gnome.org>

	Fixes bug #324191 – the xml.lang syntax file should include 
	application/vnd.mozilla.xul+xml
	
	* gedit/gedit-languages-manager.c
	(gedit_languages_manager_get_available_languages_sorted)
	(get_languages_cache) (get_language_from_cache)
	(add_language_to_cache)
	(gedit_languages_manager_get_language_from_mime_type): get the language
	associated to a given mime-type. It takes care for mime-types 
	inheritance. It also uses a cache of already matched mime-type in order 
	to improve performace for frequently used mime-types.

	* gedit/gedit-languages-manager.h: new prototype for function
	gedit_languages_manager_get_language_from_mime_type
	
	* gedit/gedit-document.c (set_uri): uses the new function
	gedit_languages_manager_get_language_from_mime_type

2006-08-23  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-python-plugin.c: fix a small leak.

2006-08-23  Jesse van den Kieboom  <jesse@icecrew.nl>
