@@ -1,3 +1,8 @@
+2006-08-24  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit/gedit-document-loader.c: handle remote zero lenght files
+	correctly.
+
 2006-08-24  Paolo Maggi  <paolo@gnome.org>
 
 	Fixes bug 352658 – print preview state machine issue.
